# django-rest-extensions

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: README.md  api.rst  conf.py  index.rst  run_server.sh  usage.md
example/: manage.py  rest_extensions
example/account/: admin.py  models.py
example/account/migrations/: 0001_initial.py  0002_user_extra.py  0003_auto_20191120_0642.py  0004_auto_20191120_0653.py
example/schoolproject/: settings.py  urls.py  wsgi.py
rest_extensions/: authentication.py  fields.py  filters.py  mixins.py  paginations.py  permissions.py  tests.py  urls.py  utils.py  views.py
src/rest_extensions/: __about__.py  __init__.py  apps.py  authentication.py  fields.py  mixins.py  permissions.py  serializers.py  urls.py  utils.py  views.py
